<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="4"
    android:padding="1dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/firstLayout"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/centerFirstHorizontalShim"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:visibility="invisible" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_giveMoney"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/centerFirstHorizontalShim"
                android:background="@color/mycolor"
                android:gravity="center"
                android:text="@string/giveMoney"
                android:textColor="#FFFFFF">
            </android.support.v7.widget.AppCompatButton>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_eternalLive"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/centerFirstHorizontalShim"
                android:background="@color/mycolor"
                android:gravity="center"
                android:text="@string/eternalLife"
                android:textColor="#FFFFFF">
            </android.support.v7.widget.AppCompatButton>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/secondLayout"
        android:layout_weight="1"
        android:padding="3dp"
        android:layout_below="@+id/firstLayout"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/centerSecondHorizontalShim"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:visibility="invisible" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_askAboutFuture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/centerSecondHorizontalShim"
                android:background="@color/mycolor"
                android:gravity="center"
                android:text="@string/askAboutFuture"
                android:textColor="#FFFFFF">
            </android.support.v7.widget.AppCompatButton>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_backToPast"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/centerSecondHorizontalShim"
                android:background="@color/mycolor"
                android:gravity="center"
                android:text="@string/backToPast"
                android:textColor="#FFFFFF">
            </android.support.v7.widget.AppCompatButton>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdLeyout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/secondLayout"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/centerThirdHorizontalShim"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:visibility="invisible" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_futureTravel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/centerThirdHorizontalShim"
                android:background="@color/mycolor"
                android:gravity="center"
                android:text="@string/futureTravel"
                android:textColor="#FFFFFF">
            </android.support.v7.widget.AppCompatButton>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_Teleportation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/centerThirdHorizontalShim"
                android:background="@color/mycolor"
                android:gravity="center"
                android:text="@string/teleportation"
                android:textColor="#FFFFFF">
            </android.support.v7.widget.AppCompatButton>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourthLeyout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/thirdLeyoutLayout"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/centerLastHorizontalShim"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:visibility="invisible" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_askGod"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/centerLastHorizontalShim"
                android:background="@color/mycolor"
                android:gravity="center"
                android:text="Podróże w przyszłość"
                android:textColor="#FFFFFF">
            </android.support.v7.widget.AppCompatButton>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_connectWithAlien"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/centerLastHorizontalShim"
                android:background="@color/mycolor"
                android:gravity="center"
                android:text="@string/teleportation"
                android:textColor="#FFFFFF">
            </android.support.v7.widget.AppCompatButton>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>